# CPU6502

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: build.yml  check-format.yml  full-build.yml
src/: hardware.rs  lib.rs
src/cpu/: hardware.rs  registers.rs
src/cpu/hardware/: discard.rs  empty.rs
src/hardware/: discard.rs  empty.rs
